--- a/docs/developer-setup/automated-releases.mdx
+++ b/docs/developer-setup/automated-releases.mdx
@@ -43,8 +43,9 @@ We conduct code releases with the following steps:
 1. Code freeze: create a branch for the code release version as well as the first code release candidate (labeled RC1).
     * For example, for code release version `v0.2.0`, create a branch `opensrp-0.2.0`, a pre-release `opensrp-0.2.0-rc1`, and a tag `opensrp-0.2.0-rc1`
 1. Candidate progression: This is followed by 1-2 weeks of QA and error fixing
-    * Whenever we find an error in the candidate, open a pull request with a fix for the error against the code release branch (e.g.  `v0.2.0`) and against the `main` branch.
+    * Whenever we find an error in the candidate, open a pull request with a fix for the error against the code release branch (e.g.  `v0.2.0`)
     * Once the error is fixed and merged into the code release branch (multiple errors can be batched), create a new tag, e.g. `opensrp-0.2.0-rc2`, the update the pre-release to point to this tag and reflect the RC2 name.
+    > You must also either a) open a PR with the same fix against the `main` branch, b) open a PR from the release branch into the `main` branch after merging the fix.
 1. Repeat step (2.) until QA passes, e.g. with more tags, e.g. `opensrp-0.2.0-rc3` ..., and updated pre-releases.
 1. Final code release: when the release passes QA, create a final release tag `v0.2.0` and update the release to point to this tag and reflect the `opensrp-0.2.0` name.
 
