--- a/docs/developer-setup/sentry.mdx
+++ b/docs/developer-setup/sentry.mdx
@@ -8,7 +8,7 @@
 
 ### Instructions
 
-1.  Once you have created the Sentry project as instructed above, inside the `local.properties` file add a line e.g
+1.  Once you have created the Sentry project as instructed above, inside the `local.properties` file add a line in the form
     `sentry.dsn=xxxxxx` replace the `xxxxxx` with the `sentry dsn` from your project in sentry. This will be picked up 
     automatically by the setup inside the quest module's build.gradle file
 2.  If you want to seperate your staging and production environment logs and performance information you can add an environment variable 
@@ -16,7 +16,7 @@
     data gets pushed to the dashboard for the first time, the environment will be automatically created. Use the Environment tag set from the previous step to filter               environment as shown below.
     ![sentry_environment_dropdown](https://github.com/opensrp/fhircore/assets/12864384/e00e9da9-01ea-41ec-aa72-5588fde4fdf8)
 
-3.  Timber logs in performance monitoring should show up in the Sentry dashboard. Sentry will track crashes and timber Errors. You can also
+3.  Timber logs should show up in the Sentry dashboard. Sentry will track crashes and timber Errors. You can also
     configure the log levels inside the Sentry.init function
 4.  By default we have configured additional sentry integrations for:
     - Navigation
