--- a/docs/configurations/working-with-rules.mdx
+++ b/docs/configurations/working-with-rules.mdx
@@ -41,3 +41,34 @@ condition | Indicates that the rule should always be evaluated | Yes | true |
 actions | Specifies the specific operations to be performed when the rule is evaluated | Yes | |
 
 The **"data.put()"** function is used to store the extracted data in a data object, using a key-value pair format.
+
+
+## evaluateToBoolean() rule
+
+This rule is used within the rules engine or workflow to be able to determine whether an expression or condition is true or not. To evaluate specific data in the sample JSON below, include **evaluateToBoolean()** and add the required parameters to the method in order to determine whether the output is true or false.
+
+``` json
+    {
+      "name": "isPregnant",
+      "condition": "true",
+      "actions": [
+        "data.put('isPregnant', service.evaluateToBoolean(data.get('activeConditions'), \"Condition.code.text = 'Pregnant' \", false))"
+      ]  
+    },
+```   
+## Config properties of evaluateToBoolean() rule using the above json config
+|Property | Description | Required | Default |
+|--|--|:--:|:--:|
+name | Provides a descriptive name for the rule to be extracted | Yes | |
+condition | Indicates that the rule should always be evaluated | Yes | true |
+actions | Specifies the specific operations to be performed when the rule is evaluated | Yes | List |
+description | Provides relevant information about the rule to be evaluated | | |
+priority | Specifies the priority of the component. The priority value determines the order in which the components are evaluated and executed. Lower values indicate higher priority | | 1 |
+
+**evaluateToBoolean()**  takes **three** parameters:
+
+|Parameter | Example | Description | Required |
+|--|--|:--:|:--:|
+context| 'isPregnant' | Specifies the context or data from which the expression is being evaluated | Yes |
+FhirPathExpression | service.evaluateToBoolean(data.get('activeConditions'), \"Condition.code.text = 'Pregnant' \")| Specifies the expression to be evaluated. It contains the logical operators and variables that refernce values from the context | Yes |
+defaultValue | false | A boolean value that specifies the defaultValue to be returned if the expression results in an error or does not produce a boolean value | |
